@@ -4395,12 +4395,25 @@ void SCIPswapPointers(
    void**                pointer2            /**< second pointer */
    );
 
+/** randomly shuffles parts of an integer array using the Fisher-Yates algorithm */
+extern
+void SCIPpermuteIntArray(
+   int*                  array,              /**< array to be shuffled */
+   int                   begin,              /**< first index that should be subject to shuffling (0 for whole array) */
+   int                   end,                /**< last index that should be subject to shuffling (array size for whole
+					      *   array)
+					      */
+   unsigned int*         randseed            /**< seed value for the random generator */
+   );
+
 /** randomly shuffles parts of an array using the Fisher-Yates algorithm */
 extern
 void SCIPpermuteArray(
    void**                array,              /**< array to be shuffled */
    int                   begin,              /**< first index that should be subject to shuffling (0 for whole array) */
-   int                   end,                /**< last index that should be subject to shuffling (array size for whole array) */
+   int                   end,                /**< last index that should be subject to shuffling (array size for whole
+					      *   array)
+					      */
    unsigned int*         randseed            /**< pointer to seed value for the random generator */
    );
 
